# gerrit-haskell

./: .gitreview  .zuul.yaml  CHANGELOG.md  Makefile  README.md  flake.nix  gerrit-haskell.cabal  gerrit.cabal  project.config
app/: Main.hs
src/: Gerrit.hs
src/Gerrit/: Client.hs  Data.hs  Event.hs
src/Gerrit/Data/: Account.hs  Change.hs  Event.hs  Project.hs  Review.hs
test/: Spec.hs
test/data/: ChangeEvent.json  ChangeEventMerged.json  EventChangeAbandoned.json  EventChangeMerged.json  EventCommentAdded.json  EventProjectCreated.json  EventRefUpdated.json  EventWipStateChanged.json  GerritChange.json  ReviewInput.json  ReviewResult.json
