cabal-version:       2.4
name:                gerrit-haskell
version:             0.0.0.0
synopsis:            A gerrit client
description:
    A gerrit client.
    See README.md for more details.
license:             Apache-2.0
license-file:        LICENSE
author:              software factory dev
maintainer:          software factory dev <softwarefactory-dev@redhat.com>
copyright:           2020 software factory dev
category:            Development
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5

common common-options
  build-depends:       base

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Gerrit

executable gerrit-haskell
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       gerrit-haskell
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite gerrit-haskell-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       gerrit-haskell
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
