cabal-version:       2.4
name:                gerrit
version:             0.0.0.0
synopsis:            A gerrit client
description:
    A gerrit client.
    See README.md for more details.
license:             Apache-2.0
license-file:        LICENSE
author:              Software Factory Dev
maintainer:          Software Factory Dev <softwarefactory-dev@redhat.com>
copyright:           2020 Red Hat
category:            Development
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.6.5

common common-options
  build-depends:       base
                     , http-client
                     , http-client-tls
                     , aeson
                     , bytestring
                     , containers
                     , text

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -- Let's keep unused imports around as documentation purpose
                       -Wno-unused-imports
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-extensions:  NamedFieldPuns
                     , OverloadedStrings
                     , RecordWildCards
  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Gerrit
                     , Gerrit.Data
  other-modules:       Gerrit.Client

executable gerrit
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       gerrit
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite gerrit-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       gerrit
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
