cabal-version:       2.4
name:                gerrit
version:             0.0.1.0
synopsis:            A gerrit client library
description:
    Gerrit is a client library to interface with https://www.gerritcodereview.com/
    .
    Use this library to query and post to gerrit REST API.
    .
license:             Apache-2.0
license-file:        LICENSE
author:              Software Factory Dev
maintainer:          Software Factory Dev <softwarefactory-dev@redhat.com>
copyright:           2020 Red Hat
category:            Development
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.6.5

common common-options
  build-depends:       base                   >= 4.11.0.0 && < 5
                     , aeson                  >= 1.0.0.0  && < 1.6
                     , bytestring             < 0.11
                     , containers             >= 0.5.8.0  && < 0.7
                     , http-client            >= 0.5.0    && < 0.8
                     , http-client-tls        >= 0.2.0    && < 0.4
                     , text                   >= 0.11.1.0 && < 1.3

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -- Let's keep unused imports around as documentation purpose
                       -Wno-unused-imports
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-extensions:  NamedFieldPuns
                     , OverloadedStrings
                     , RecordWildCards
  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Gerrit
                     , Gerrit.Data
  other-modules:       Gerrit.Client

executable gerrit
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       gerrit
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite gerrit-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       gerrit
                     , tasty                      >= 0.11.2   && < 1.5
                     , tasty-hunit                >= 0.10     && < 0.11
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
